--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
          <img border="0" alt="linkedin" src="link.png" width="100" height="100"></a>
          <a href="https://www.instagram.com/rishav0204/" target="_blank">
          <img border="0" alt="instagram" src="insta.jfif" width="100" height="100"></a>
-         <a href="https://github.com/rishav0204" target="_blank">
+         <a href="https://github.com/rishavranjandtu" target="_blank">
          <img border="0" alt="github" src="gith.png" width="100" height="100"></a>
          </center>
 
