--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
    <center>
       &copy This website belongs to Rishav Ranjan
 </center>
+     <a href='https://www.symptoma.it/'>https://www.symptoma.it</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=26ddb7b1b5c3416d645683da2ba96a6a9415bc38'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/829418/t/2"></script>
 </footer>
 </html>
